--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DenemeActivity">
-            
-        </activity>
+        <activity android:name=".DenemeActivity" />
+        <activity android:name=".Calendar.CalendarActivity"></activity>
     </application>
 
 </manifest>
