--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".DenemeActivity" />
         <activity android:name=".Calendar.CalendarActivity" />
+        <activity android:name=".Calendar.EventActivity" />
         <activity android:name=".Calendar.DayActivity"></activity>
     </application>
 
